# CareerPilot-AI

./: .gitignore  README.md  app.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
ai-core/: README.md  requirements.txt
ai-core/agents/: __init__.py  evaluation_agent.py  exam_agent.py  group_interview_agent.py  interview_agent.py  job_recommendation_agent.py  llm_client.py  model_imports.py  report_agent.py  simulation.py  stress_interview_agent.py  supervisor_agent.py  workflow.py
ai-core/prompts/: answer_evaluation.md  group_interview.md  interview_question.md  job_interview.md  job_recommendation.md  pitch_interview.md  report_generation.md  short_answer_grading.md  stress_interview.md  technical_interview.md  written_exam.md
ai-core/report_schema/: report.example.json
ai-core/scoring/: __init__.py  objective.py  simulation.py  summary.py
ai-core/skills/: __init__.py  definitions.py  modes.py
ai-core/tests/: test_simulation_scoring.py
backend/: .env.example  .env.vercel.example  README.md  alembic.ini  requirements-dev.txt  requirements.txt  vercel.json
backend/app/: __init__.py  main.py
backend/data/: job_seeds.json
backend/migrations/: env.py
backend/tests/: __init__.py  conftest.py  test_auth_and_sessions.py  test_config.py  (+7 more)
docs/: API_CONTRACT.md  DATABASE_SCHEMA.md  PHASES.md  REPORT_SCHEMA.md  TEAM_WORKFLOW.md  VERCEL_DEPLOYMENT.md
frontend/: .env.example  README.md  index.html  package.json  vercel.json  vite.config.js
knowledge/: README.md  __init__.py  models.py  requirements.txt
(+132 files in other folders)
